--- a/static/video.html
+++ b/static/video.html
@@ -348,7 +348,7 @@
                 const result = await response.json();
 
                 currentResultFile = result.video_data;
-                document.getElementById('resultVideo').src = `/static/${result.video_data}`;
+                document.getElementById('resultVideo').src = `/temp/${result.video_data}`;
                 document.getElementById('totalDetections').textContent = result.total_detections;
 
                 setTimeout(() => {
@@ -367,7 +367,7 @@
         function downloadResult() {
             if (currentResultFile) {
                 const link = document.createElement('a');
-                link.href = `/static/${currentResultFile}`;
+                link.href = `/temp/${currentResultFile}`;
                 link.download = currentResultFile;
                 link.click();
             }
